--- a/en-US/module/i18n.md
+++ b/en-US/module/i18n.md
@@ -160,7 +160,7 @@ For users to change language option, see beego.me source code for more details.
 
 #### Handle language in controller
 
-While the `i18n.Locale` as anonymous fied to be embedded in `baseController`, we can use `this.Tr(format string, args ...interface{})` to handle language in controller.
+While the `i18n.Locale` as anonymous field to be embedded in `baseController`, we can use `this.Tr(format string, args ...interface{})` to handle language in controller.
 
 ### Handle language in template
 
@@ -222,7 +222,7 @@ Module i18n provides a command line helper tool beei18n for simplify steps of yo
 
 Command `sync` allows you use a exist local file as the template to create or sync other locale files:
 
-	beei18n sync srouce_file.ini other1.ini other2.ini
+	beei18n sync source_file.ini other1.ini other2.ini
 
 This commnad can operate 1 or more files in one command.
 
