--- a/en-US/module/i18n.md
+++ b/en-US/module/i18n.md
@@ -21,7 +21,7 @@ First of all, you have to import this package:
 
 The format of locale files is very like INI format configuration file, which is basically key-value pairs. But this module has some improvements. Every language corresponding to a locale file, for example, under `conf` folder of beego.me, there are two files called `locale_en-US.ini` and `locale_zh-CN.ini`.
 
-The name and extensions of locale files can be anything, but we strongly recommand you to follow the style of beego.me.
+The name and extensions of locale files can be anything, but we strongly recommend you to follow the style of beego.me.
 
 ## Minimal example
 
@@ -76,7 +76,7 @@ In this piece of code, we get languages that we want to support in the configura
 
 #### Initialize controller language
 
-Following code is from beego.me source file `routers/router.go`, which decides the user languae option by order of URL specified, Cookies and browser `Accept-Language`.
+Following code is from beego.me source file `routers/router.go`, which decides the user language option by order of URL specified, Cookies and browser `Accept-Language`.
 
 ```go
 // setLangVer sets site language version.
@@ -224,7 +224,7 @@ Command `sync` allows you use a exist local file as the template to create or sy
 
 	beei18n sync source_file.ini other1.ini other2.ini
 
-This commnad can operate 1 or more files in one command.
+This command can operate 1 or more files in one command.
 
 ## More information
 
