--- a/en-US/module/i18n.md
+++ b/en-US/module/i18n.md
@@ -53,8 +53,8 @@ Following code is from beego.me source file `routers/init.go`:
 
 ```go
 // Initialized language type list.
-langs := strings.Split(models.Cfg.MustValue("lang", "types"), "|")
-names := strings.Split(models.Cfg.MustValue("lang", "names"), "|")
+langs := strings.Split(beego.AppConfig.String("lang::types"), "|")
+names := strings.Split(beego.AppConfig.String("lang::names"), "|")
 langTypes = make([]*langType, 0, len(langs))
 for i, v := range langs {
 	langTypes = append(langTypes, &langType{
