Updated en-US docs

--- a/en-US/module/i18n.md
+++ b/en-US/module/i18n.md
@@ -5,7 +5,7 @@ sort: 8
 
 # Introduction to i18n
 
-This module is mainly used for i18n of sites and applications, which provides multiple-language options to users, improve user experience. Sites like [Go Walker](http://gowalker.org) and [beego.me](http://beego.me) use this module to implement Chinese and English user interfaces.
+This module is mainly used for i18n of sites and applications, which provides multiple-language options to users, improve user experience. Sites like [Go Walker](http://gowalker.org) and [Beego.me](http://beego.me) use this module to implement Chinese and English user interfaces.
 
 You can use following command to install this module:
 
@@ -43,7 +43,7 @@ bye = 再见
 
 ### Use in controller
 
-For every request, beego uses individual goroutine to handle; therefore, you can embed a `i18n.Locale` as anonymous field to process locale operations of current request. This requires you understand the idea of `baseController` and `Prepare` method. See source file `routers/router.go` of beego.me for more details.
+For every request, Beego uses individual goroutine to handle; therefore, you can embed a `i18n.Locale` as anonymous field to process locale operations of current request. This requires you understand the idea of `baseController` and `Prepare` method. See source file `routers/router.go` of beego.me for more details.
 
 After accepted the request, use `Prepare` method of `baseController` to do language operations, which you only need to write same code once and use it in all the upper level controllers.
 
