--- a/zh-CN/module/i18n.md
+++ b/zh-CN/module/i18n.md
@@ -181,7 +181,7 @@ func (this *baseRouter) setLangVer() bool {
 
 ## 分区功能
 
-针对不同页面，同一个健的名称很可能会对应不同的含义。因此，i18n 模块还利用 INI 格式配置文件的节特性来实现分区功能。
+针对不同页面，同一个键的名称很可能会对应不同的含义。因此，i18n 模块还利用 INI 格式配置文件的节特性来实现分区功能。
 
 例如，同样是键名 `about`，在首页需要显示为 `关于`，而在关于页面需要显示为 `关于我们`，则可以通过分区功能来实现。
 
