--- a/zh-CN/module/i18n.md
+++ b/zh-CN/module/i18n.md
@@ -5,7 +5,7 @@ sort: 8
 
 # 国际化介绍
 
-i18n 模块主要用于实现站点或应用的国际化功能，实现多语言界面与反馈，增强用户体验。像 [Go Walker](http://gowalker.org) 和 [beego 官网](http://beego.me) 即是采用了该模块实现了中文与英文的双语界面。
+i18n 模块主要用于实现站点或应用的国际化功能，实现多语言界面与反馈，增强用户体验。像 [Go Walker](http://gowalker.org) 和 [beego 官网](http://beego.vip) 即是采用了该模块实现了中文与英文的双语界面。
 
 您可以通过以下方式安装该模块：
 
