--- a/ja/module/i18n.md
+++ b/ja/module/i18n.md
@@ -5,7 +5,7 @@ sort: 8
 
 # Introduction to i18n
 
-This module is mainly used for i18n of sites and applications, which provides multiple-language options to users, improve user experience. Sites like [Go Walker](http://gowalker.org) and [beego.me](http://beego.me) use this module to implement Chinese and English user interfaces.
+This module is mainly used for i18n of sites and applications, which provides multiple-language options to users, improve user experience. Sites like [Go Walker](http://gowalker.org) and [beego.vip](http://beego.vip) use this module to implement Chinese and English user interfaces.
 
 You can use following command to install this module:
 
@@ -19,9 +19,9 @@ First of all, you have to import this package:
 	    "github.com/beego/i18n"
 	)
 
-The format of locale files is very like INI format configuration file, which is basically key-value pairs. But this module has some improvements. Every language corresponding to a locale file, for example, under `conf` folder of beego.me, there are two files called `locale_en-US.ini` and `locale_zh-CN.ini`.
+The format of locale files is very like INI format configuration file, which is basically key-value pairs. But this module has some improvements. Every language corresponding to a locale file, for example, under `conf` folder of beego.vip, there are two files called `locale_en-US.ini` and `locale_zh-CN.ini`.
 
-The name and extensions of locale files can be anything, but we strongly recommend you to follow the style of beego.me.
+The name and extensions of locale files can be anything, but we strongly recommend you to follow the style of beego.vip.
 
 ## Minimal example
 
@@ -43,13 +43,13 @@ bye = 再见
 
 ### Use in controller
 
-For every request, beego uses individual goroutine to handle; therefore, you can embed a `i18n.Locale` as anonymous field to process locale operations of current request. This requires you understand the idea of `baseController` and `Prepare` method. See source file `routers/router.go` of beego.me for more details.
+For every request, beego uses individual goroutine to handle; therefore, you can embed a `i18n.Locale` as anonymous field to process locale operations of current request. This requires you understand the idea of `baseController` and `Prepare` method. See source file `routers/router.go` of beego.vip for more details.
 
 After accepted the request, use `Prepare` method of `baseController` to do language operations, which you only need to write same code once and use it in all the upper level controllers.
 
 #### Register locale files
 
-Following code is from beego.me source file `routers/init.go`:
+Following code is from beego.vip source file `routers/init.go`:
 
 ```go
 // Initialized language type list.
@@ -72,11 +72,11 @@ for _, lang := range langs {
 }
 ```
 
-In this piece of code, we get languages that we want to support in the configuration file, in this case, we have `en-US` and `zh-CN`. Then we initialize a slice for users to change language option(not discuss here). Finally, we call `i18n.SetMessage` function in a loop to load all the locale files. Here you can see that why we recommand you use the name style of beego.me for locale files.
+In this piece of code, we get languages that we want to support in the configuration file, in this case, we have `en-US` and `zh-CN`. Then we initialize a slice for users to change language option(not discuss here). Finally, we call `i18n.SetMessage` function in a loop to load all the locale files. Here you can see that why we recommand you use the name style of beego.vip for locale files.
 
 #### Initialize controller language
 
-Following code is from beego.me source file `routers/router.go`, which decides the user language option by order of URL specified, Cookies and browser `Accept-Language`.
+Following code is from beego.vip source file `routers/router.go`, which decides the user language option by order of URL specified, Cookies and browser `Accept-Language`.
 
 ```go
 // setLangVer sets site language version.
@@ -147,7 +147,7 @@ func (this *baseRouter) setLangVer() bool {
 }
 ```
 
-The variable `isNeedRedir` indicates whether user uses URL to specify the language option, for URL clean purpose, beego.me automatically set value in cookies and redirect.
+The variable `isNeedRedir` indicates whether user uses URL to specify the language option, for URL clean purpose, beego.vip automatically set value in cookies and redirect.
 
 The line `this.Data["Lang"] = curLang.Lang` sets user language option to template variable  `Lang` so that we can handle language in template files.
 
@@ -156,7 +156,7 @@ Following two lines:
 	this.Data["CurLang"] = curLang.Name
 	this.Data["RestLangs"] = restLangs
 	
-For users to change language option, see beego.me source code for more details.
+For users to change language option, see beego.vip source code for more details.
 
 #### Handle language in controller
 
@@ -166,7 +166,7 @@ While the `i18n.Locale` as anonymous field to be embedded in `baseController`, w
 
 By passing template variable `Lang` to indicate language option, you are able to do localization in template. But before that, you need to register a template function.
 
-Following code is from beego.me source file `beeweb.go`:
+Following code is from beego.vip source file `beeweb.go`:
 
 	beego.AddFuncMap("i18n", i18n.Tr)
 	
